tests/immutable_methods/immutable_methods.exp
Error -------------------------------------------------------------- test.js:9:3

Cannot assign function to `a.foo` because property `foo` is not writable.

Error: test.js:9
  9: a.foo = function(): C { return new C(); }
       ^^^ Cannot assign function to `a.foo` because property `foo` is not writable.


Found 1 error
